--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,13 +1,11 @@
 .carHome {
   width: 100%;
   background: linear-gradient(180deg, #2784f8 0%, #eeeeee 100%);
+  position: relative;
 }
 
 .top {
   width: 100%;
-  background: #3689f5;
-  position: fixed;
-  left: 0;
 }
 
 .content {
