--- a/src/pages/home/components/dropdown-select/index.module.scss
+++ b/src/pages/home/components/dropdown-select/index.module.scss
@@ -63,13 +63,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
   z-index: 999;
 }
 
 .dropdown {
-  position: absolute;
-  top: 0;
+  position: fixed;
   left: 0;
   right: 0;
   background: #fff;
@@ -77,6 +75,7 @@
   border-radius: 0 0 8px 8px;
   overflow: hidden;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  z-index: 1000;
 }
 
 .scroll {
