--- a/src/pages/home/components/car-card/index.module.scss
+++ b/src/pages/home/components/car-card/index.module.scss
@@ -72,6 +72,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: 1.4;
