--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,36 +1,34 @@
-.carHome {
+.root {
   width: 100%;
   background: linear-gradient(180deg, #2784f8 0%, #eeeeee 100%);
-  position: relative;
+  padding: 16px;
 }
 
-.top {
-  width: 100%;
+.item {
+  border: 1px solid #e8e8e8;
+  border-radius: 16px;
+  margin-top: 16px;
+  background: rgba(255, 255, 255, .7);
+
+  .title {
+    padding: 16px;
+    border-bottom: 1px solid #e8e8e8;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .subTitle {
+    font-size: 12px;
+    margin-left: 8px;
+    font-weight: normal;
+    color: #333;
+  }
+
+  .desc {
+    padding: 16px;
+  }
 }
 
-.content {
-  padding: 8px;
-  box-sizing: border-box;
-  min-height: 100vh;
-  padding-bottom: constant(safe-area-inset-bottom);
-  padding-bottom: env(safe-area-inset-bottom);
-}
-
-.empty {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-top: 100px;
-}
-
-.emptyText {
-  font-size: 16px;
-  color: #fff;
-  margin-bottom: 8px;
-}
-
-.emptyTip {
-  font-size: 13px;
-  color: rgba(255, 255, 255, 0.7);
-}
